Fix card header titles too large

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -9,7 +9,7 @@
 }
 
 .card {
-    width: 21rem;
+    width: 18rem;
 }
 
 .card img {
